--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&amp;family=Fira+Code:wght@300;400;500;600&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="file:///C:/Users/Asusg/Downloads/w/asset/icon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="asset/icon.ico">
     <!-- Discord Embed -->
     <meta property="og:site_name" content="Eternium">
     <meta property="og:title" content="Eternium - Advanced Roblox Executor">
@@ -55,7 +55,7 @@
     </div>
     <div class="loading-screen">
         <div class="loading-content">
-            <img src="file:///C:/Users/Asusg/Downloads/w/asset/logo.png" alt="Eternium" class="loading-logo">
+            <img src="asset/logo.png" alt="Eternium" class="loading-logo">
             <div class="loading-dots">
                 <span></span>
                 <span></span>
@@ -66,7 +66,7 @@
     <nav>
         <div class="nav-container">
             <div class="logo">
-                <img src="file:///C:/Users/Asusg/Downloads/w/asset/logo.png" alt="Eternium">
+                <img src="asset/logo.png" alt="Eternium">
                 <span>Eternium.</span>
             </div>
             <div class="nav-links">
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="hero-preview">
-                <img src="file:///C:/Users/Asusg/Downloads/w/asset/Screenshot%202025-03-24%20210929.png">
+                <img src="asset/Screenshot%202025-03-24%20210929.png">
                 <div class="floating-card card1">
                     <i class="fas fa-shield-alt"></i>
                     <span>Undetected</span>
